--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2968,7 +2968,14 @@ span.wpcf7-not-valid-tip {
     font-size: 2.5rem; } }
 
 .page-id-26 table {
-  width: 120%; }
+  width: 100%; }
+
+.page-id-26 .hentry {
+  margin-bottom: 0; }
+
+.page-id-26 td {
+  border: 1px solid grey;
+  padding-left: 0.5rem; }
 
 .page-id-26 .content-area {
   line-height: 1.6rem; }
